# superpower-terminal

./: .gitignore  AGENTS.md  CODEBUDDY.md  Cargo.toml  IMPLEMENTATION_PLAN.md  P0_P1_COMPLETION_SUMMARY.md  PENDING_WORK.md  README.md  ROADMAP.md  TECHNICAL_PROPOSAL.md  UI_BEAUTIFICATION_PLAN.md
crates/superpower-app/: Cargo.toml
crates/superpower-app/src/: config.rs  event_loop.rs  lib.rs  main.rs  profile.rs  search.rs  shortcuts.rs  ui.rs
crates/superpower-core/: Cargo.toml
crates/superpower-core/src/: cell.rs  cursor.rs  damage.rs  grid.rs  lib.rs  parser.rs  selection.rs  terminal.rs
crates/superpower-pty/: Cargo.toml
crates/superpower-pty/src/: lib.rs  pty.rs
crates/superpower-renderer/: Cargo.toml
crates/superpower-renderer/src/: dw_renderer.rs  lib.rs  renderer.rs
crates/superpower-renderer/src/shaders/: bg.wgsl  fg.wgsl
