[package]
name = "superpower-app"
version = "0.1.0"
edition = "2021"

[dependencies]
superpower-core = { path = "../superpower-core" }
superpower-renderer = { path = "../superpower-renderer" }
superpower-pty = { path = "../superpower-pty" }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = "0.4"
arboard = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1"
