[package]
name = "superpower-renderer"
version = "0.1.0"
edition = "2021"

[dependencies]
superpower-core = { path = "../superpower-core" }
wgpu = { workspace = true }
winit = { workspace = true }
fontdue = { workspace = true }
bytemuck = { workspace = true }
tracing = { workspace = true }
windows = { workspace = true }
ttf-parser = "0.21.1"
